--- a/package.json
+++ b/package.json
@@ -132,7 +132,7 @@
     "typescript": "~4.9.5",
     "url-loader": "^4.1.1",
     "uuid": "^10.0.0",
-    "webpack": "^5.75.0",
+    "webpack": "^5.94.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
   },
@@ -155,7 +155,8 @@
     "ws": "^8.17.1",
     "body-parser": "^1.20.3",
     "express": "^4.20.0",
-    "micromatch": "^4.0.8"
+    "micromatch": "^4.0.8",
+    "axios": "1.7.4"
   },
   "prettier": "@carlsberg/prettier-config",
   "nyc": {
